k8s/paperless-ngx/paperless-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paperless
  namespace: paperless
  labels:
    app: paperless
spec:
  serviceName: paperless
  replicas: 3
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
        - name: paperless
          image: lscr.io/linuxserver/paperless-ngx:latest
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/data"
              name: paperless-data
            - mountPath: "/media"
              name: paperless-media
            - mountPath: "/consume"
              name: paperless-consume
  volumeClaimTemplates:
    - metadata:
        name: paperless-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: cstor-csi-disk
        resources:
          requests:
            storage: 20Gi

    - metadata:
        name: paperless-media
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: cstor-csi-disk
        resources:
          requests:
            storage: 10Gi

    - metadata:
        name: paperless-consume
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: cstor-csi-disk
        resources:
          requests:
            storage: 5Gi
